--- a/index.html
+++ b/index.html
@@ -269,15 +269,15 @@ statement_4_runs_if_condition_is_false; }
               The JavaScript statements that define the function, enclosed in curly brackets, { }.
             </li>
           </ul>
-          For example, the following code defines a simple function named square:
-          <code>
+        <p>For example, the following code defines a simple function named square:</p>
+          <p><code>
             function square(number) { return number * number; }
-          </code>
-          The function square takes one argument, called number. The function consists of one statement that says to return the argument of the function (that is, number) multiplied by itself. The return statement specifies the value returned by the function.
-          <code>
+            </code></p>
+          <p>The function square takes one argument, called number. The function consists of one statement that says to return the argument of the function (that is, number) multiplied by itself. The return statement specifies the value returned by the function.</p>
+          <p><code>
             return number * number;
-          </code>
-          Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function.
+          </code></p>
+          <p>Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function.
         </p>
       </section>
       <section class="main-section" id="reference">
@@ -289,4 +289,3 @@ statement_4_runs_if_condition_is_false; }
     </main>
   </body>
 </html>
-
